--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-Flask>=2.0
-jdatetime>=3.8
-requests>=2.28
-gunicorn>=20
-python-dotenv>=1.0
-tzdata>=2023.3
-APScheduler>=3.10
-pytz
-apscheduler==3.10.4
-python-telegram-bot
+pip install aiogram 
+jdatetime 
+pytz 
+aiosqlite 
+apscheduler
